--- a/src/Residence/Residencechild.css
+++ b/src/Residence/Residencechild.css
@@ -28,7 +28,7 @@
   margin-left: 10px;
   border-bottom: 5px solid goldenrod;
   color: goldenrod;
-  text-align: left; 
+  text-align: left;
 }
 .luxury {
   font-family: "luxury";
@@ -155,30 +155,42 @@ h1.gold-section {
   .grid-resident-element {
     display: block;
   }
-  .residence-home-logo-grey {
-    margin-top: -8%;
-    height: 258px;
-    margin-bottom: 0px;
+  .grid-container-element.homepager{
+    display: block;
+
   }
-  .the-residences {
+
+  .residence-home-logo-grey {
+    height: 210px;
+    margin-top: 5%;
+    margin-bottom: -5%;
+  }
+  .the-residences.room {
     color: gray;
-    height: 220px;
     background: #efbf3b;
     padding: 5px;
     text-align: center;
+    color: gray;
+    height: 270px;
+    padding: 5px;
+    width: 450px;
   }
+
   h6.gold-section {
-    font-size: 18px;
-    margin-top: -19%;
-    margin-right: 310px;
+     font-size: 120%;
+    margin-top: -20px;
+    margin-right: 160px;
+    font-family: "luxury";
   }
   h1.gold-section {
-    font-size: 280%;
+    font-size: 190%;
+    font-family: "luxury";
+    margin-left: -9%;
   }
   .gold-section {
     font-family: "luxury";
   }
-  .care { 
+  .care {
     color: grey;
     font-family: "luxury";
     font-size: 150%;
@@ -195,10 +207,10 @@ h1.gold-section {
     color: grey;
     font-family: "luxury";
   }
-  .childimage{
+  .childimage {
     object-fit: cover;
   }
-  .kubwa-resident{
-    margin: 0 0  0  0;
+  .kubwa-resident {
+    margin: 0 0 0 0;
   }
 }
