--- a/src/Residence/Rooms.css
+++ b/src/Residence/Rooms.css
@@ -37,7 +37,7 @@
 }
 .disclaimer {
   /* background-color: grey; */
-  height: 130px;
+  height: 130px;  
   padding: 6px;
 }
 .activelink {
@@ -129,28 +129,33 @@ h1.gold-secition {
 @media all and (max-width: 700px) {
   .grid-container {
     display: block;
+    grid-template-columns: 2fr 2fr 2fr;
   }
   .residence-home-logo-white {
-    margin-top: -11%;
+    margin-top: -19%;
     height: 230px;
     margin-bottom: -5%;
   }
   .the-residences.white {
     color: gray;
-    width: 295px;
-    height: 220px;
+    width: 355px;
+    height: 190px;
     background: #efbf3b;
     padding: 5px;
     text-align: center;
   }
   h6.gold-secition {
-    font-size: 18px;
-    margin-right: 210px;
-  }
-  h1.gold-secition  {
-    font-size: 200%;
-  }
-  .gold-section {
+    font-size: 120%;
+   margin-top: -20px;
+   margin-right: 160px;
+   font-family: "luxury";
+ }
+ h1.gold-secition {
+   font-size: 190%;
+   font-family: "luxury";
+   margin-left: -9%;
+ }
+  .gold-secition {
     font-family: "luxury";
   }
   .care {
@@ -204,11 +209,11 @@ h1.gold-secition {
   }
   .grid-child.green.side{
     object-fit: cover;
-    width: 295px;
+    width: 355px;
   }
   .grid-child.pink.side{
     object-fit: cover;
-    width: 295px;
+    width: 355px;
   }
   .sidebar-center {
     /* background-color: pink; */
@@ -217,5 +222,8 @@ h1.gold-secition {
     padding-left: 5px;
     padding-top: 1px;
     cursor: pointer;
+  }
+  .explore-avi{
+    text-align: left;
   }
 }
