--- a/src/Amenities/Ataglance.css
+++ b/src/Amenities/Ataglance.css
@@ -3,7 +3,7 @@
   margin: 0 0 0 0;
   /* margin-bottom: 50px; */
   grid-gap: 0px;
-  grid-template-columns: 4fr 7fr;
+  grid-template-columns: 4fr 7fr; 
   /* background-color: aquamarine; */
 }
 .grid-child-element.green.at {
@@ -88,9 +88,10 @@
   height: 190px;
 }
 .list-amenities.two {
+  /* background-color: pink; */
   margin-top: 3%;
   text-align: left;
-  height: 190px;
+  height: 220px;
 }
 .list-amenities ul li {
   margin-left: 30px;
@@ -122,7 +123,7 @@
   .list-amenities.three {
     margin-top: 5%;
     text-align: left;
-    margin-left: -10%;
+    margin-left: -20%;
   }
   .grid-child-element.green.at {
     object-fit: cover;
