--- a/src/Navbar/Full.css
+++ b/src/Navbar/Full.css
@@ -19,20 +19,25 @@
   margin-top: 190px;
 }
 .mini-topic {
-  font-family: "luxury"; 
+  font-family: "luxury";
   font-size: 20px;
   /* background-color: brown; */
 }
 a {
   text-decoration: none;
 }
-@media all and (max-width: 700px) {
+
+@media only screen and (min-width: 600px) {
+  .full-menu {
+    background-color: goldenrod;
+    height: 100vh;
+
+  }
   .option1 {
-    /* background-color: brown; */
     margin-top: -2%;
   }
   .menu-opt {
-    /* background-color: brown; */
+    
     margin-top: 10%;
     font-family: "luxury";
     color: rgb(104, 101, 101);
@@ -41,5 +46,54 @@ a {
   .mini-topic {
     font-family: "luxury";
     font-size: 40%; 
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .full-menu {
+    background-color: goldenrod;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .full-menu {
+    background-color: goldenrod;
+    height: 100vh;
+  }
+  option1 {
+    margin-top: -2%;
+  }
+  .menu-opt {
+    margin-top: 5%;
+    
+    
+    font-size: 210%;
+  }
+  .mini-topic {
+    font-size: 60%; 
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .fuller-menu {
+    /* background-color: pink; */
+    height: 100vh;
+  }
+  .full-menu{
+    background-color: goldenrod;
+    height: 100vh;
+  }
+  .option1 {
+   margin-top: 2%;
+  }
+  .menu-opt {
+    font-size: 230%;
+  }
+  .mini-topic {
+    font-size: 60%;
+    margin-top: -2%; 
   }
 }
