--- a/src/Residence/Rooms.css
+++ b/src/Residence/Rooms.css
@@ -1,5 +1,5 @@
 .grid-container {
-  display: grid;
+  display: grid; 
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 0px;
   margin-left: 20px;
@@ -227,3 +227,69 @@ h1.gold-secition {
     text-align: left;
   }
 }
+/* LAPTOP */
+@media only screen and (min-width: 992px){
+  .the-residences.white {
+    color: gray;
+    width: 455px;
+    height: 280px;
+    background: #efbf3b;
+    padding: 5px;
+    text-align: center;
+  }
+  .sidebar-center {
+    /* background-color: pink; */
+    margin-top: 10px;
+    padding-left: 5px;
+    padding-top: 1px;
+    cursor: pointer;
+  }
+  h6.gold-secition {
+  font-size: 18px;
+  margin-top: -20%;
+  margin-right: 310px;
+  font-size: 115%;
+}
+h1.gold-secition {
+  font-size: 250%;
+}
+.gold-secition {
+  font-family: "luxury";
+}
+.paragraph-bottom-disclaimer {
+  height: 200px;
+  font-size: 20px;
+  color: rgb(85, 85, 85);
+  font-family: "luxury";
+  /* background: pink; */
+}
+}
+/* @media only screen and (max-width: 768px){
+  .grid-container.room{
+    display: block;
+  }
+  .paragraph-bottom-disclaimer {
+    height: 200px;
+    font-size: 20px;
+    color: rgb(85, 85, 85);
+   
+    text-align: center;
+   
+  }
+  .sidebar-center {
+    margin-top: 10px;
+    padding-left: 5px;
+    padding-top: 1px;
+    cursor: pointer;
+    text-align: center;
+    
+  }
+  .grid-child.green.side{
+    
+    object-fit: cover;
+  }
+  .dd {
+    width: 100%;
+    object-fit: cover;
+  }
+} */
