Milestone: Childbar content visibility changed

--- a/src/Navbar/ChildNav.css
+++ b/src/Navbar/ChildNav.css
@@ -210,7 +210,8 @@ header .nav-btn {
     color: #7b7471;
   }
   .menutext {
-    color: black;
+   
+    visibility: var(--mainColor);
   }
   .barss {
     position: absolute;
