--- a/src/Amenities/Sun.css
+++ b/src/Amenities/Sun.css
@@ -1,6 +1,6 @@
 .grid-container-sun {
   display: grid;
-  grid-template-columns: 0.4fr 1fr 1fr;
+  grid-template-columns: 2fr 6fr;
   grid-gap: 0px;
   margin-left: 20px;
   margin-right: 20px;
@@ -31,7 +31,6 @@ h6.brown-section {
   margin-top: 15%;
 }
 .center1 {
-
   margin-top: 20px;
   padding: 10px;
   height: 200px;
@@ -49,7 +48,6 @@ h6.brown-section {
   font-size: 270%;
 }
 .disclaimer {
-  /* background-color: grey; */
   height: 130px;
   padding: 6px;
   font-size: 120%;
