--- a/src/Residence/Residencechild.css
+++ b/src/Residence/Residencechild.css
@@ -38,6 +38,7 @@
 }
 .childimage {
   width: 100%;
+  height: 850px;
 }
 .grid-child-purple {
   /* background-color: aquamarine; */
@@ -127,18 +128,18 @@ h1.gold-section {
   font-family: "luxury";
   font-weight: normal;
   color: #7c7471;
-  margin-bottom: 0;
+  margin-top: 0;
   font-weight: bold;
   text-align: center;
   cursor: pointer;
-  /* background: pink; */
+
 }
 .paragraph-bottom {
   /* background-color: pink; */
-  padding-top: 38px;
-  height: 200px;
+  padding-top: 14px;
+  height: 110px;
   font-size: 19px;
-  margin-top: 25px;
+  margin-top: 15px;
   color: grey;
   font-family: "luxury";
 }
@@ -193,7 +194,7 @@ h1.gold-section {
   .care {
     color: grey;
     font-family: "luxury";
-    font-size: 150%;
+    font-size: 28px;
     text-align: center;
   }
   .paragraph-bottom {
