--- a/src/Residence/Rooms.css
+++ b/src/Residence/Rooms.css
@@ -19,7 +19,7 @@
 @font-face {
   font-family: "luxury";
   src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
-}
+} 
 .residence-heading {
   height: 250px;
   background: goldenrod;
@@ -28,7 +28,7 @@
   font-size: 250%;
 }
 .sidebar-center {
-  /* background-color: pink; */
+
   height: 270px; 
   margin-top: 20px;
   padding: 10px;
@@ -74,6 +74,7 @@
   width: 700px;
   height: 90vh;
   object-fit: cover;
+  border: 4px solid white;
 }
 .explore-avi {
   font-family: "luxury";
@@ -293,3 +294,28 @@ h1.gold-secition {
     object-fit: cover;
   }
 } */
+
+.flexbox-container-living {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: stretch;
+  /* background-color: yellow; */
+  height: 87vh;
+  padding: 0px 20px 10px 20px;
+  /* position: relative; */
+}
+
+.flexbox-item-living1 {
+  /* background-color: pink; */
+
+  width: 140px;
+  flex-grow: 1;
+  
+}
+.flexbox-item-living2 {
+  /* background-color: peru; */
+  width: 1090px;
+  height: 87vh;
+  flex-grow: 1;
+}
