--- a/src/Amenities/Amenities.css
+++ b/src/Amenities/Amenities.css
@@ -1,288 +1,284 @@
 .grid-container-element {
-    display: grid;
-    grid-template-columns: 6fr 9fr;
-    grid-gap: 0px; 
-  
-    width: 100%;
-    height: 100vh; 
-  }
-  .grid-child-element {
-    object-fit: fill;
-  }
-  .childimage { 
-    width: 100%;
-    height: 100vh;
-  }
-  .grid-child-element.purple {
-   
-    text-align: center;
-  }
-  .content {
-    /* background: pink; */
-    font-size: 200%;
-    height: 290px;
-    margin-top: 290px;
-  }
-  .redirect-button{
-      height: 100px;
-  }
-  
-  .button-46 {
-    align-items: center;
-    background-color: rgba(240, 240, 240, 0.26);
-    border: 1px solid #DFDFDF;
-    /* border-radius: 16px; */
-    box-sizing: border-box;
-    color: #ffffff;
-    cursor: pointer;
-    font-size: 28px;
-    justify-content: center;
-    line-height: 28px;
-    max-width: 100%;
-    padding: 14px 22px;
-    text-decoration: none;
-    transition: all .2s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    width: 40%;
-  }
-  
-  .button-46:active,
-  .button-46:hover {
-    outline: 0;
-  }
-  
-  .button-46:hover {
-    color: goldenrod;
-  background-color: #FFFFFF;
+  display: grid;
+  grid-template-columns: 6fr 9fr;
+  grid-gap: 0px;
+
+  width: 100%;
+  height: 100vh;
+}
+.grid-child-element {
+  object-fit: fill;
+}
+.childimage {
+  width: 100%;
+  height: 100vh;
+}
+.grid-child-element.purple {
+  text-align: center;
+}
+.content {
+  /* background: pink; */
+  font-size: 200%;
+  height: 290px;
+  margin-top: 290px;
+}
+.redirect-button {
+  height: 100px;
+}
+
+.button-46 {
+  align-items: center;
+  background-color: rgba(240, 240, 240, 0.26);
+  border: 1px solid #dfdfdf;
+  /* border-radius: 16px; */
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 28px;
+  justify-content: center;
+  line-height: 28px;
+  max-width: 100%;
+  padding: 14px 22px;
+  text-decoration: none;
+  transition: all 0.2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 40%;
+}
+
+.button-46:active,
+.button-46:hover {
+  outline: 0;
+}
+
+.button-46:hover {
+  color: goldenrod;
+  background-color: #ffffff;
   border-color: rgba(0, 0, 0, 0.19);
+}
+
+@media (min-width: 768px) {
+  .button-46 {
+    font-size: 20px;
+    min-width: 200px;
+    padding: 14px 16px;
   }
-  
-  @media (min-width: 768px) {
-    .button-46 {
-      font-size: 20px;
-      min-width: 200px;
-      padding: 14px 16px;
-    }
-  }
-  @font-face {
-    font-family: 'luxury2';
-    src: url(/din/fonts/FF\ DIN\ Pro\ Regular\ 2.otf);
-  }
-  .reside{
-    font-family: 'luxury2';
-  }
-  .amenity-logo{
-    height: 100px;
-  }
-  .logo-top-left{
-    position: absolute;
-      top: 15px;
-      left: 28px;
-  }
-  .logo-top-left img{
-    height: 70px;
-  
-  }
-  .logo-top-left a{
+}
+@font-face {
+  font-family: "luxury2";
+  src: url(/din/fonts/FF\ DIN\ Pro\ Regular\ 2.otf);
+}
+.reside {
+  font-family: "luxury2";
+}
+.amenity-logo {
+  height: 100px;
+}
+.logo-top-left {
+  position: absolute;
+  top: 15px;
+  left: 28px;
+}
+.logo-top-left img {
+  height: 70px;
+}
+.logo-top-left a {
   text-decoration: none;
   /* color: black; */
   font-size: 30px;
   margin-left: 20px;
   position: absolute;
-      top: 20px;
-      left: 66px;
-      width: 150px;
-      color: #7b7471;
-    }
-  .bars-top-right{
-    /* background-color: purple; */
+  top: 20px;
+  left: 66px;
+  width: 150px;
+  color: #7b7471;
+}
+.bars-top-right {
+  /* background-color: purple; */
+  position: absolute;
+  top: 10px;
+  right: 59px;
+  transform: scale(2.9, 1.5);
+  font-size: 18px;
+  margin-top: 8px;
+  color: white;
+}
+.residenceimagehome {
+  object-fit: cover;
+}
+@media all and (max-width: 700px) {
+  .logo-top-left {
     position: absolute;
-      top: 10px;
-      right: 59px;
-      transform: scale(2.9,1.5);
-      font-size: 18px;
-      margin-top: 8px;
-      color: white;
-  
+    top: 15px;
+    left: 18px;
   }
-  .residenceimagehome{
-    object-fit: cover;
+  .logo-top-left img {
+    height: 50px;
   }
-  @media all and (max-width: 700px) {
-    .logo-top-left {
-      position: absolute;
-      top: 15px;
-      left: 18px;
-    }
-    .logo-top-left img {
-      height: 50px;
-    }
-    .logo-top-left a {
-      text-decoration: none;
-      font-size: 129%;
-      position: absolute;
-      top: 15px;
-      left: 20px;
-      width: 150px;
-      color: #7b7471;
-    }
-    .grid-container-element.homepager {
-      display: block;
-    }
-    .grid-container-neighbor.homepager{
-      display: block;
-    }
-    .bars-top-right {
-      position: absolute;
-      top: 29px;
-      right: 40px;
-      transform: scale(2.9, 1.5);
-      font-size: 15px;
-      margin-top: 8px;
-      color: black;
-    }
-    .grid-container-element {
-      display: grid;
-      grid-template-columns: 7fr 6fr;
-      grid-gap: 0px;
-      width: 100%;
-      height: 100vh;
-      background-color: grey;
-      margin: 0 0 0 0;
-    }
-    .content.jirani{
-      background-color: white;
-     
-    }
-    h4.jirani-main{
-      color: rgb(98, 92, 92);
-    }
-    h5.jirani-paragraph{
-      color: rgb(98, 92, 92);
-    }
-    
-    .navbary-loogo {
-      height: 67px;
-      border-radius: 90px;
-      margin-bottom: 10px;
-    }
-    .reside.style {
-      font-family: "luxury2";
-      font-size: 70%;
-      color: #7b7471;
-      margin-bottom: 15px;
-      margin-top: 15px;
-      /* background-color: peru; */
-    }
-    .reside-paragraph.disc {
-      font-family: "luxury";
-      font-weight: normal;
-      text-align: center;
-      /* background-color: brown; */
-      color: #7b7471;
-      font-size: 60%;
-    }
-    .content {
-      /* background: pink; */
-      
-      height: 350px;
-      margin-top: 65%;
-    }
-  
-    .button-46 {
-      font-family: "luxury";
-      font-size: 60%;
-      min-width: 200px;
-      padding: 14px 16px;
-    }
-  }
-
-
-  /* NEEW CSS */
-  .flexbox-container-amenity {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: stretch;
-  }
-  .flexbox-item-amenity-1 {
-    /* background-color: pink; */
-    width: 450px;
-    padding-top: 256px;
-    text-align: center;
-    height: 760px;
-    flex-grow: 1;
-  }
-  .reside {
-    font-size: 26px;
+  .logo-top-left a {
+    text-decoration: none;
+    font-size: 129%;
+    position: absolute;
+    top: 15px;
+    left: 20px;
+    width: 150px;
     color: #7b7471;
   }
-  .reside-paragraph {
-    font-size: 23px;
-    color: #7b7471;
-    font-weight: normal;
+  .grid-container-element.homepager {
+    display: block;
   }
-  .flexbox-item-amenity-2 {
-    flex-grow: 1;
-    width: 990px;
+  .grid-container-neighbor.homepager {
+    display: block;
   }
-  .landing-page-logo {
-    height: 120px;
+  .bars-top-right {
+    position: absolute;
+    top: 29px;
+    right: 40px;
+    transform: scale(2.9, 1.5);
+    font-size: 15px;
+    margin-top: 8px;
+    color: black;
   }
-  /* image */
-  .amenity-profile {
-    object-fit: cover;
-    height: 100vh;
+  .grid-container-element {
+    display: grid;
+    grid-template-columns: 7fr 6fr;
+    grid-gap: 0px;
     width: 100%;
+    height: 100vh;
+    background-color: grey;
+    margin: 0 0 0 0;
   }
-  /* BUTTON */
+  .content.jirani {
+    background-color: white;
+  }
+  h4.jirani-main {
+    color: rgb(98, 92, 92);
+  }
+  h5.jirani-paragraph {
+    color: rgb(98, 92, 92);
+  }
+
+  .navbary-loogo {
+    height: 67px;
+    border-radius: 90px;
+    margin-bottom: 10px;
+  }
+  .reside.style {
+    font-family: "luxury2";
+    font-size: 70%;
+    color: #7b7471;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    /* background-color: peru; */
+  }
+  .reside-paragraph.disc {
+    font-family: "luxury";
+    font-weight: normal;
+    text-align: center;
+    /* background-color: brown; */
+    color: #7b7471;
+    font-size: 60%;
+  }
+  .content {
+    /* background: pink; */
+
+    height: 350px;
+    margin-top: 65%;
+  }
+
   .button-46 {
     font-family: "luxury";
-    align-items: center;
-    background-color: goldenrod;
-    border: 1px solid #dfdfdf;
-    box-sizing: border-box;
-    color: #ffffff;
-    font-weight: bold;
-    cursor: pointer;
-    font-size: 28px;
-    justify-content: center;
-    line-height: 28px;
-    max-width: 100%;
-    padding: 14px 22px;
-    text-decoration: none;
-    transition: all 0.2s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    width: 40%;
-    margin-top: 15px;
+    font-size: 60%;
+    min-width: 200px;
+    padding: 14px 16px;
   }
-  
-  .button-46:active,
-  .button-46:hover {
-    outline: 0;
+}
+
+/* NEEW CSS */
+.flexbox-container-amenity {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: stretch;
+}
+.flexbox-item-amenity-1 {
+  /* background-color: pink; */
+  width: 450px;
+  padding-top: 256px;
+  text-align: center;
+  height: 760px;
+  flex-grow: 1;
+  position: relative;
+}
+.reside {
+  font-size: 26px;
+  color: #7b7471;
+}
+.reside-paragraph {
+  font-size: 23px;
+  color: #7b7471;
+  font-weight: normal;
+}
+.flexbox-item-amenity-2 {
+  flex-grow: 1;
+  width: 990px;
+}
+.landing-page-logo {
+  height: 120px;
+}
+/* image */
+.amenity-profile {
+  object-fit: cover;
+  height: 100vh;
+  width: 100%;
+}
+/* BUTTON */
+.button-46 {
+  font-family: "luxury";
+  align-items: center;
+  background-color: goldenrod;
+  border: 1px solid #dfdfdf;
+  box-sizing: border-box;
+  color: #ffffff;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 28px;
+  justify-content: center;
+  line-height: 28px;
+  max-width: 100%;
+  padding: 14px 22px;
+  text-decoration: none;
+  transition: all 0.2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 40%;
+  margin-top: 15px;
+}
+
+.button-46:active,
+.button-46:hover {
+  outline: 0;
+}
+
+.button-46:hover {
+  color: goldenrod;
+  background-color: #ffffff;
+  border-color: rgba(0, 0, 0, 0.19);
+}
+
+@media (min-width: 768px) {
+  .button-46 {
+    font-size: 20px;
+    min-width: 200px;
+    padding: 14px 16px;
   }
-  
-  .button-46:hover {
-    color: goldenrod;
-    background-color: #ffffff;
-    border-color: rgba(0, 0, 0, 0.19);
-  }
-  
-  @media (min-width: 768px) {
-    .button-46 {
-      font-size: 20px;
-      min-width: 200px;
-      padding: 14px 16px;
-    }
-  }
-  .logo3{
-    /* background-color: peru; */
-    height:120px;
-    width:120px;
-    margin-left: 290px;
-    
-  }
+}
+
+.logo3 {
+  height: 120px;
+  width: 120px;
+  margin: 0 auto;
+  position: relative;
+}
