--- a/src/Amenities/Amenitieschild.css
+++ b/src/Amenities/Amenitieschild.css
@@ -40,10 +40,16 @@
   color: goldenrod;
   text-align: left;
 }
-.amen-3 {
+.amenw-3 {
   padding: 6px;
   color: grey;
-  height: 550px;
+  height: 455px;
+  background: rgb(49, 49, 49);
+}
+.amenww-3 {
+  padding: 6px;
+  color: grey;
+  height: 455px;
   background: rgb(49, 49, 49);
 }
 /* EXPLORE */
@@ -94,23 +100,30 @@
   font-family: "luxury";
 }
 .carey{
-  margin-top: 20px;
+  margin-top: 15px;
   color: goldenrod;
   font-family: "luxury";
-  font-size: 30px;
+  font-size: 28px;
+  margin-left: 40px;
+}
+.careyy{
+  margin-top: 15px;
+  color: goldenrod;
+  font-family: "luxury";
+  font-size: 25px;
   margin-left: 40px;
 }
 .ring{
   /* text-align: center; */
   padding: 5px 5px 5px 5px;
-  height: 250px;
+  height: 180px;
   margin-top: 50px;
-  
+  /* background-color: pink; */
 }
 .paragraph-bottommer {
   padding: 29px 27px 7px 7px;
  /* background-color: pink; */
-  margin-left: 40px;
+  margin-left: 30px;
   height: 100px;
   font-size: 17px;
   margin-top: 50px;
@@ -148,10 +161,11 @@
 }
 .paragraph-infi {
   text-align: left;
-  padding: 25px 0px 7px 7px;
+  padding: 15px 0px 7px 7px;
   /* background-color: pink; */
   font-family: "luxury";
   margin-left: 9%;
+  margin-top: -12px;
 }
 
 .downarrow{
@@ -181,10 +195,10 @@
     color: grey;
     font-family: "luxury";
   }
-  .amen-3 {
+  .amenw-3 {
     padding: 6px;
     color: grey;
-    height: 510px;
+    height: 410px;
     background: rgb(49, 49, 49);
   }
   .explorer {
