--- a/src/Amenities/Sun.css
+++ b/src/Amenities/Sun.css
@@ -12,35 +12,35 @@
 .kubwa-sun {
   margin: 0 0 0 0;
 }
-.the-sun { 
-  color: gray; 
-  height: 329px; 
+.the-sun {
+  color: gray;
+  height: 260px;
   background: rgb(62, 61, 61);
   padding: 5px;
   text-align: center;
-} 
+}
 h1.brown-section {
-  font-size: 190%;
+  font-size: 28px;
   font-family: "luxury";
 }
 h6.brown-section {
-  font-size: 120%;
-  margin-top: 30px;
-  margin-right: 110px;
+  font-size: 19px;
+  margin-top: -10px;
+  margin-right: 210px;
   font-family: "luxury";
-  margin-top: 15%;
 }
 .center1 {
-  margin-top: 20px;
-  padding: 10px;
-  height: 200px;
+  /* background: pink; */
+  margin-top: 14px;
+  padding: 9px;
+  height: 150px;
   color: goldenrod;
   border-bottom: 2px solid grey;
 }
-.residence-home-logo-grey.spec{
+.residence-home-logo-grey.spec {
   height: 160px;
-    margin-top: 5%;
-    margin-bottom: -5%;
+  margin-top: 10px;
+  /* background-color: peru; */
 }
 .sunner {
   margin-top: 40px;
@@ -48,14 +48,22 @@ h6.brown-section {
   font-size: 270%;
 }
 .disclaimer {
-  height: 130px;
-  padding: 6px;
+  /* background-color: purple; */
+  height: 180px;
+  padding: 10px 0 10px 5px;
+  font-size: 120%;
+  margin-top: 30px;
+}
+.disclaimerr {
+  /* background-color: purple; */
+  height: 180px;
+  padding: 10px 0 10px 5px;
   font-size: 120%;
   margin-top: 30px;
 }
 .eastward {
   font-family: "luxury";
-  font-size: 160%;
+  font-size: 30px;
   margin-top: 10px;
   color: gray;
   font-weight: bold;
@@ -64,6 +72,9 @@ h6.brown-section {
   font-family: "luxury";
   margin-top: 15px;
   color: grey;
+  /* background-color: pink; */
+  height: 50px;
+  margin-bottom: 20px;
 }
 .example {
   font-family: "luxury";
@@ -72,9 +83,8 @@ h6.brown-section {
   padding-top: 5px;
   padding-bottom: 10px;
 }
-.example.twos{
+.example.twos {
   text-align: right;
-
 }
 .ddsun {
   height: 90vh;
@@ -130,11 +140,31 @@ h6.brown-section {
     font-family: "luxury";
     font-size: 200%;
   }
-  .eastward{
+  .eastward {
     font-size: 120%;
+  }
+  .east-gard {
+    font-size: 90%;
+  }
+}
 
-  }
-  .east-gard{
-    font-size:90%;
-  }
+.flexbox-container-sun {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: stretch;
+
+  height: 87vh;
+  padding: 0px 20px 10px 20px;
+}
+
+.flexbox-item-sun1 {
+  position: relative;
+  width: 140px;
+  flex-grow: 1;
+}
+.flexbox-item-sun2 {
+  width: 990px;
+  height: 84vh;
+  flex-grow: 1;
 }
