--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -5,15 +5,14 @@
   align-items: stretch;
   color: grey;
   text-align: left;
-}
+} 
 .flexbox-item-contact2 {
-  background-color: pink;
-  width: 1020px;
-  height: 760px;
+  width: 720px;
+  height: 660px;
   flex-grow: 1;
 }
 .flexbox-item-contact1 {
-  height: 100vh;
+  height: 88vh;
   flex-grow: 1;
   width: 10px;
   padding-left: 20px;
@@ -28,14 +27,14 @@
 .devs{
   margin-top: 20px;
   font-weight: bold;
-  font-size: 32px;
+  font-size: 28px;
   padding-bottom: 20px;
 }
 .strand{
   text-align: left;
   color: grey;
   font-size: 20px;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 .address{
   padding: 10px 10px 10px 35px;
@@ -50,11 +49,14 @@
 .find{
   color: grey;
   margin-top: 20px;
+  font-size: 28px;
 }
 .small-paragraph{
   padding-top: 10px;
+  padding-left: 10px;
   color: grey;
   font-size: 13px;
+  /* background-color: pink; */
 }
 .terms{
   color: goldenrod;
