--- a/src/Neighborhood/NeighMap.css
+++ b/src/Neighborhood/NeighMap.css
@@ -18,7 +18,7 @@
 }
 .map-1 {
   text-align: left;
-  height: 320px;
+  height: 300px;
   border-bottom: 3px solid goldenrod;
 }
 .gain { 
@@ -27,9 +27,8 @@
 .gainn {
   font-family: "luxury";
   color: grey;
-  /* margin-top: 20px; */
-  font-size: 180%;
-  padding: 18px 15px 7px 7px;
+  font-size:28px;
+  padding: 15px 15px 7px 7px;
 }
 h2.gain {
   color: grey;
@@ -108,6 +107,7 @@ h5.gain {
 .jkia {
   font-family: "luxury";
   color: grey;
+  font-size: 19px;
 } 
 .go-to-menu{
   font-family: 'luxury';
