--- a/src/Neighborhood/Neighborhoodchild.css
+++ b/src/Neighborhood/Neighborhoodchild.css
@@ -61,19 +61,19 @@
 }
 .the-neighboorhood {
   color: gray;
-  height: 329px;
+  height: 290px auto;
   background: rgb(62, 61, 61);
   padding: 5px;
   text-align: center;
-  /* border-bottom: 3px solid goldenrod; */
 }
 h6.gold-secttion {
   font-size: 18px;
   margin-top: 30px;
-  margin-right: 280px;
+  margin-right: 270px;
 }
 h1.gold-secttion {
-  font-size: 200%;
+  font-size: 30px;
+  
   margin-bottom: 30px;
 }
 .gold-secttion {
@@ -84,54 +84,55 @@ h1.gold-secttion {
   src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
 }
 .residence-neigh-logo-grey {
-  margin-top: -12%;
-  height: 278px;
+  margin-top: -12px;
+  height: 288px;
+  margin-bottom: -36px;
 }
 .gold-secttion.one {
   margin-top: -9%;
 }
 .contenting {
   margin-top: 20px;
-  height: 200px;
+  height: 180px;
   text-align: left;
   margin-left: 30px;
+ 
+
 }
 .exclude {
   color: grey;
   font-family: "luxury";
   margin-top: 10px;
-  font-size: 190%;
+  font-size: 30px;
   padding: 18px 30px 7px 7px;
 }
 
 .excluder {
   color: gray;
   font-family: "luxury";
-
-  font-size: 190%;
+  font-size: 30px;
 }
 .coddler {
   font-family: "luxury";
   text-align: left;
   color: grey;
-  font-size: 120%;
+  font-size: 20px;
+  /* background-color: pink; */
 }
 .coddler.bot {
   font-family: "luxury";
   text-align: left;
   color: grey;
-  font-size: 120%;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 .coddle {
-  margin-top: -65px;
-  height: 300px;
+  margin-top: -65px auto;
+  height: 200px;
   padding: 38px 20px 7px 27px;
-}
-.grid-child-element.puple{
-  background-color: white;
+  /* background-color: pink; */
 
 }
+
 .downarrow.jir{
   font-family: 'luxury';
   font-size: 50%;
