--- a/src/Residence/Rooms.css
+++ b/src/Residence/Rooms.css
@@ -1,25 +1,8 @@
-.grid-container {
-  display: grid; 
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 0px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 0;
-  height: 77vh; 
-}
-.grid-containneer {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 0px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 0;
-  /* height: 50vh; */
-}
+
 @font-face {
   font-family: "luxury";
   src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
-} 
+}
 .residence-heading {
   height: 250px;
   background: goldenrod;
@@ -28,16 +11,16 @@
   font-size: 250%;
 }
 .sidebar-center {
-
-  height: 270px; 
+  height: 210px;
   margin-top: 20px;
   padding: 10px;
   font-size: 170%;
   cursor: pointer;
+  /* background-color: grey; */
 }
 .disclaimer {
   /* background-color: grey; */
-  height: 130px;  
+  height: 130px;
   padding: 6px;
 }
 .activelink {
@@ -60,10 +43,9 @@
 }
 .paragraph-bottom-disclaimer {
   height: 200px;
-  font-size: 20px;
-  /* margin-top: 0px; */
+  font-size: 18px;
   color: rgb(85, 85, 85);
-  font-family: "luxury";
+  /* font-family: "luxury"; */
   /* background: pink; */
 }
 #disclaimer {
@@ -86,11 +68,10 @@
   /* background-color: pink; */
   margin-left: 28%;
 }
-.go-to-menuk{
+.go-to-menuk {
   color: grey;
-  font-family: 'luxury';
+  font-family: "luxury";
   font-size: 170%;
-  
 }
 .example {
   font-family: "luxury";
@@ -108,197 +89,27 @@
   text-align: right;
 }
 .residence-home-logo-white {
-  margin-top: 10px;
-  height: 250px;
-  width: 270px;
-  margin-bottom: 10px;
+  height: 290px;
+  width: 310px;
   padding-bottom: -6px;
-  /* background-color: pink; */
+  position: relative;
 }
 h6.gold-secition {
   font-size: 18px;
-  margin-top: -29px;
+  margin-top: -59px;
   margin-right: 310px;
 }
 h1.gold-secition {
-  font-size: 280%;
+  font-size: 45px;
 }
 .gold-secition {
   font-family: "luxury";
 }
-
-@media all and (max-width: 700px) {
-  .grid-container {
-    display: block;
-    grid-template-columns: 2fr 2fr 2fr;
-  }
-  .residence-home-logo-white {
-    margin-top: -19%;
-    height: 230px;
-    margin-bottom: -5%;
-  }
-  .the-residences.white {
-    color: gray;
-    width: 355px;
-    height: 190px;
-    background: #efbf3b;
-    padding: 5px;
-    text-align: center;
-  }
-  h6.gold-secition {
-    font-size: 120%;
-   margin-top: -20px;
-   margin-right: 160px;
-   font-family: "luxury";
- }
- h1.gold-secition {
-   font-size: 190%;
-   font-family: "luxury";
-   margin-left: -9%;
- }
-  .gold-secition {
-    font-family: "luxury";
-  }
-  .care {
-    color: grey;
-    font-family: "luxury";
-    font-size: 150%;
-    text-align: center;
-  }
-  .grid-containneer {
-    display: block;
-  }
-  .example.one{
-    font-size: 30%;
-  }
-  .example.two{
-    /* background-color: pink; */
-    text-align: left;
-    font-size: 30%;
-  }
-  .dd {
-    width: 100%;
-    object-fit: cover;
-  }
-  #rooms{
-    font-size: 50%;
-
-  }
-  .activelink {
-    margin-top: 10px;
-    font-size: 50%;
-    color: goldenrod;
-    font-family: "luxury";
-  }
-  .activelink.b {
-    margin-top: 28px;
-    font-size: 50%;
-    color: goldenrod;
-    font-family: "luxury";
-  }
-  .paragraph-bottom-disclaimer {
-    height: 150px;
-    padding-left: 4px;
-    color: rgb(85, 85, 85);
-    font-family: "luxury";
-    margin-top: -24%;
-    width: 350px;
-   
-  }
-  #disclaimer{
-    font-size: 60%;
-  }
-  .grid-child.green.side{
-    object-fit: cover;
-    width: 355px;
-  }
-  .grid-child.pink.side{
-    object-fit: cover;
-    width: 355px;
-  }
-  .sidebar-center {
-    /* background-color: pink; */
-    height: 270px;
-    margin-top: 10px;
-    padding-left: 5px;
-    padding-top: 1px;
-    cursor: pointer;
-  }
-  .explore-avi{
-    text-align: left;
-  }
-}
-/* LAPTOP */
-@media only screen and (min-width: 992px){
-  .the-residences.white {
-    color: gray;
-    width: 455px;
-    height: 280px;
-    background: #efbf3b;
-    padding: 5px;
-    text-align: center;
-  }
-  .sidebar-center {
-    /* background-color: pink; */
-    margin-top: 10px;
-    padding-left: 5px;
-    padding-top: 1px;
-    cursor: pointer;
-  }
-  h6.gold-secition {
-  font-size: 18px;
-  margin-top: -20%;
-  margin-right: 310px;
-  font-size: 115%;
-}
-h1.gold-secition {
-  font-size: 250%;
-}
-.gold-secition {
-  font-family: "luxury";
-}
-.paragraph-bottom-disclaimer {
-  height: 200px;
-  font-size: 20px;
-  color: rgb(85, 85, 85);
-  font-family: "luxury";
-  /* background: pink; */
-}
-}
-/* @media only screen and (max-width: 768px){
-  .grid-container.room{
-    display: block;
-  }
-  .paragraph-bottom-disclaimer {
-    height: 200px;
-    font-size: 20px;
-    color: rgb(85, 85, 85);
-   
-    text-align: center;
-   
-  }
-  .sidebar-center {
-    margin-top: 10px;
-    padding-left: 5px;
-    padding-top: 1px;
-    cursor: pointer;
-    text-align: center;
-    
-  }
-  .grid-child.green.side{
-    
-    object-fit: cover;
-  }
-  .dd {
-    width: 100%;
-    object-fit: cover;
-  }
-} */
 
 .flexbox-container-living {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: stretch;
   /* background-color: yellow; */
   height: 87vh;
@@ -307,15 +118,17 @@ h1.gold-secition {
 }
 
 .flexbox-item-living1 {
-  /* background-color: pink; */
-
+  position: relative;
   width: 140px;
+  flex-grow: 1;
+ 
+}
+.flexbox-item-living2 {
+  width: 990px;
+  height: 84vh;
   flex-grow: 1;
   
 }
-.flexbox-item-living2 {
-  /* background-color: peru; */
-  width: 1090px;
-  height: 87vh;
-  flex-grow: 1;
+.the-residences.white{
+  margin-right: 10px;
 }
